@startuml

title __CONFIGURATION's Class Diagram__\n

  namespace com.blackhearth.securevoipclient {
    namespace configuration {
      class com.blackhearth.securevoipclient.configuration.ApplicationConfig {
          + callingUsers()
          + restTemplate()
          + waitingUsers()
      }
    }
  }
  

  namespace com.blackhearth.securevoipclient {
    namespace configuration {
      class com.blackhearth.securevoipclient.configuration.ClientConfig {
          {static} - CLIENT_HIGH : double
          {static} - CLIENT_WIDTH : double
          + ClientConfig()
          + gamePanel()
          + generateLoginPanel()
      }
    }
  }
  

  namespace com.blackhearth.securevoipclient {
    namespace configuration {
      class com.blackhearth.securevoipclient.configuration.ContextSwapper {
          {static} - CLIENT_HIGH : double
          {static} - CLIENT_WIDTH : double
          - callingUsers : List<Pair<String, String>>
          - scene : VBox
          - waitingUsers : List<Button>
          + ContextSwapper()
          + swapToWaitingRoom()
          - generateUsers()
          - swapToCallingActivity()
      }
    }
  }
  

  namespace com.blackhearth.securevoipclient {
    namespace configuration {
      class com.blackhearth.securevoipclient.configuration.PopUpConfig {
          {static} - CLIENT_HIGH : double
          {static} - CLIENT_WIDTH : double
          - scene : VBox
          + PopUpConfig()
          + popup()
      }
    }
  }
  

  com.blackhearth.securevoipclient.configuration.ContextSwapper o-- com.blackhearth.securevoipclient.client.BasicClientData : basicClientData
  com.blackhearth.securevoipclient.configuration.ContextSwapper o-- com.blackhearth.securevoipclient.client.BasicClientData : clientData
  com.blackhearth.securevoipclient.configuration.ContextSwapper o-- com.blackhearth.securevoipclient.client.network.ClientSender : clientSender
  com.blackhearth.securevoipclient.configuration.ContextSwapper o-- com.blackhearth.securevoipclient.client.connection.ConnectionService : connectionService
  com.blackhearth.securevoipclient.configuration.ContextSwapper o-- com.blackhearth.securevoipclient.client.waitingroom.WaitingRoomService : waitingRoomService
  com.blackhearth.securevoipclient.configuration.PopUpConfig o-- com.blackhearth.securevoipclient.client.BasicClientData : basicClientData
  com.blackhearth.securevoipclient.configuration.PopUpConfig o-- com.blackhearth.securevoipclient.configuration.ContextSwapper : contextSwapper
  com.blackhearth.securevoipclient.configuration.PopUpConfig o-- com.blackhearth.securevoipclient.rsa.BasicConverter : converter
  com.blackhearth.securevoipclient.configuration.PopUpConfig o-- com.blackhearth.securevoipclient.client.register.RegisterService : registerService
  com.blackhearth.securevoipclient.configuration.PopUpConfig o-- com.blackhearth.securevoipclient.rsa.RSAGenerator : rsaGenerator
  com.blackhearth.securevoipclient.configuration.PopUpConfig o-- com.blackhearth.securevoipclient.client.network.ClientSender : sending


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
